--- a/FCC/ColoredMarker/coloredmarker.html
+++ b/FCC/ColoredMarker/coloredmarker.html
@@ -9,5 +9,17 @@
     <body>
         <h1>CSS Color Markers</h1>
         <div class="container"></div>
+        <div class="marker red">
+            <div class="cap"></div>
+            <div class="sleeve"></div>
+        </div>
+        <div class="marker green">
+            <div class="cap"></div>
+            <div class="sleeve"></div>
+        </div>
+        <div class="marker blue">
+            <div class="cap"></div>
+            <div class="sleeve"></div>
+        </div>
     </body>
 </html>
