--- a/FCC/Registration Form/registrationform.html
+++ b/FCC/Registration Form/registrationform.html
@@ -20,12 +20,12 @@
                 </label>
             </fieldset>
             <fieldset>
-                <label for="personal-account"><input id="personal-account" type="radio" name="account-type" /> Personal Account
+                <label for="personal-account"><input class="inline" id="personal-account" type="radio" name="account-type" /> Personal Account
                 </label>
-                <label for="business-account"><input id="business-account" type="radio" name="account-type" /> Business Account
+                <label for="business-account"><input class="inline" id="business-account" type="radio" name="account-type" /> Business Account
                 </label>
                 <label for="terms-and-conditions">
-                    <input id="terms-and-conditions" type="checkbox" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
+                    <input class="inline" id="terms-and-conditions" type="checkbox" required /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
                 </label>
             </fieldset>
             <fieldset>
