--- a/Frontend/catphoto_bootstrap.html
+++ b/Frontend/catphoto_bootstrap.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
     h2 {
@@ -14,24 +16,29 @@
     }
 </style>
 <div class="container-fluid">
-    <h2 class="text-primary text-center">CatPhotoApp</h2>
-
-    <a href="#">
-        <img class="img-responsive thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
-        <img class="img-responsive" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg">
-    </a>
     <div class="row">
-        <div class="col-xs-4">
-            <button class="btn btn-primary btn-block">Like</button>
-        </div>
-        <div class="col-xs-4">  
-            <button class="btn btn-block btn-info">Info</button>
+        <div class="col-xs-8">
+            <h2 class="text-primary text-center">CatPhotoApp</h2>
         </div>
         <div class="col-xs-4">
-            <button class="btn btn-block btn-danger">Delete</button>
+            <a href="#">
+                <img class="img-responsive thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back.">
+                <img class="img-responsive" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg">
+            </a>
         </div>
     </div>
-    <p>Things cats love:</p>
+    <div class="row">
+        <div class="col-xs-4">
+            <button class="btn btn-primary btn-block"><i class="fas fa-thumbs-up"></i>Like</button>
+        </div>
+        <div class="col-xs-4">  
+            <button class="btn btn-block btn-info"><i class="fas fa-info-circle"></i>Info</button>
+        </div>
+        <div class="col-xs-4">
+            <button class="btn btn-block btn-danger"><i class="fas fa-trash"></i>Delete</button>
+        </div>
+    </div>
+    <p>Things cats <span class="text-danger">love:</span></p>
     <ul>
         <li>cat nip</li>
         <li>laser pointers</li>
@@ -44,12 +51,32 @@
         <li>other cats</li>
     </ol>
     <form action="https://freecatphotoapp.com/submit-cat-photo">
-        <label><input type="radio" name="indoor-outdoor"> Indoor</label>
-        <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
-        <label><input type="checkbox" name="personality"> Loving</label>
-        <label><input type="checkbox" name="personality"> Lazy</label>
-        <label><input type="checkbox" name="personality"> Crazy</label>
-        <input type="text" placeholder="cat photo URL" required>
-        <button type="submit">Submit</button>
+        <div class="row">
+            <div class="col-xs-6"></div>
+                <label><input type="radio" name="indoor-outdoor"> Indoor</label>
+            </div>
+            <div class="col-xs-6">
+                <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
+            </div>    
+        </div> 
+        <div class="row">
+            <div class="col-xs-4">
+                <label><input type="checkbox" name="personality"> Loving</label>
+            </div>
+            <div class="col-xs-4">
+                <label><input type="checkbox" name="personality"> Lazy</label>
+            </div>
+            <div class="col-xs-4">
+                <label><input type="checkbox" name="personality"> Crazy</label>
+            </div>
+        </div> 
+        <div class="row">  
+            <div class="cols-xs-7"> 
+                <input class="form-control" type="text" placeholder="cat photo URL" required>
+            </div>
+            <div class="cols-xs-5">
+                <button class="btn btn-primary" type="submit"><i class="fa fa-paper-plane"></i>Submit</button>
+            </div>    
+        </div>
     </form>
 </div>
